feat(index): add preview card on meta information

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <!--FONT-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
     
+    <!--PREVIEW CARD-->
+    <meta property="og:title" content="CORPOSIT – Custodia de envíos por carretera">
+    <meta property="og:description" content="Seguridad terrestre confiable para tus activos en tránsito.">
+    <meta property="og:image" content="https://tacticalonion.github.io/corpositt/assets/img/corpositt-preview-card.png">
+    <meta property="og:url" content="https://tacticalonion.github.io/corpositt">
 
 </head>
 <body>
