feat(index): add icon page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>CORPOSITT – Custodia de envíos por carretera</title>
     <meta name="description" content="CORPOSIT ofrece custodia profesional de mercancías por carretera, con escoltas capacitados y procesos de seguridad confiables a nivel nacional.">
     <meta name="author" content="CORPOSITT">
+    <link rel="icon" href="assets/corpositt-sf-logo.svg" type="image/svg+xml">
 
     <!--STYLES-->
     <link rel="stylesheet" href="./styles/style.css">
