feat(style): add nav-bar style

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!--MENU-->
     <nav id="nav-bar">
         <ol>
+            <img src="./assets/corpositt-sf-logo -blanco.svg" type="image/svg+xml" class="icon">
             <!--Home-->
             <li>
                 <a href="#home">Inicio</a>
