--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <!--VALUE 1-->
                 <li>
                     <div class="value" onclick="toggleInfo(this)">
-                        <img src="./assets/img/security.webp">
+                        <img src="./assets/img/security.webp" alt="seguridad">
                         <div class="info">
                             <h4>Seguridad</h4>
                             <p>
@@ -120,7 +120,7 @@
                 <!--VALUE 2-->
                 <li>
                     <div class="value" onclick="toggleInfo(this)">
-                        <img src="./assets/img/precision.webp">
+                        <img src="./assets/img/precision.webp" alt="precision">
                         <div class="info">
                             <h4>Precisión</h4>
                             <p>
@@ -133,7 +133,7 @@
                 <!--VALUE 3-->
                 <li>
                     <div class="value" onclick="toggleInfo(this)">
-                        <img src="./assets/img/professional.webp">
+                        <img src="./assets/img/professional.webp" alt="profesionalismo">
                         <div class="info">
                             <h4>Profesionalismo</h4>
                             <p>
@@ -172,7 +172,7 @@
             <!--SERVICE 2-->
             <article>
                 <div class="card">
-                    <img src="./assets/img/city.webp" class="card-image">
+                    <img src="./assets/img/city.webp" class="card-image" alt="ciudad">
                     <div class="card-content">
                         <h3>Viaje corto</h3>
                         <span>1 a 10km</span>
